bug: Help dropdown is hidden behind other elements

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -35,3 +35,6 @@
     left: 30%;
     position: absolute;
 }
+.to-front {
+    z-index: 200;
+}
